--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="https://i.imgur.com/NzCcS7A.jpg" alt="Rupesh Kumar Professional Portrait" class="w-full max-w-md mx-auto" />
+                    <img src="https://raw.githubusercontent.com/Rupesh-Kumar-Photography/Rupesh-Kumar-/main/attached/IMG_20250525_180908_612.jpg" alt="Rupesh Kumar Professional Portrait" class="w-full max-w-md mx-auto" />
                     <div class="camera-icon">
                         <i data-lucide="camera" width="32" height="32"></i>
                     </div>
