--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
                         </div>
                         <div style="display: flex; align-items: center;">
                             <i data-lucide="map-pin" width="20" height="20" style="color: #FFD700; margin-right: 1rem;"></i>
-                            <span>Mumbai, Maharashtra, India</span>
+                            <span>Bhilai, Chhattisgarh,🇮🇳 India</span>
                         </div>
                     </div>
                     
