--- a/index.html
+++ b/index.html
@@ -906,8 +906,9 @@
                 <a href="https://wa.me/917415297122">
                     <i data-lucide="message-circle" width="24" height="24"></i>
                 </a>
-                <a href="#">
-                    <i data-lucide="youtube" width="24" height="24"></i>
+                <a href="https://youtube.com/@vlogsrk92?si=YwsLKekMDKc_6jXF" target="_blank" title="Visit my YouTube channel">
+  <i data-lucide="youtube" width="24" height="24"></i>
+</a>
                 </a>
             </div>
             <div style="border-top: 1px solid #333; padding-top: 2rem; margin-top: 2rem;">
