--- a/index.html
+++ b/index.html
@@ -954,49 +954,175 @@
 
         // Portfolio data
         const portfolioData = [
-            {
-                id: 1,
-                title: "Wedding Ceremony",
-                category: "wedding",
-                imageUrl: "https://images.unsplash.com/photo-1519741497674-611481863552?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Beautiful wedding ceremony photography"
-            },
-            {
-                id: 2,
-                title: "Professional Portrait",
-                category: "portrait",
-                imageUrl: "https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Professional business portrait session"
-            },
-            {
-                id: 3,
-                title: "Wedding Reception",
-                category: "wedding",
-                imageUrl: "https://images.unsplash.com/photo-1606216794074-735e91aa2c92?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Wedding reception celebration"
-            },
-            {
-                id: 4,
-                title: "Corporate Event",
-                category: "event",
-                imageUrl: "https://images.unsplash.com/photo-1511795409834-ef04bbd61622?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Corporate event photography"
-            },
-            {
-                id: 5,
-                title: "Studio Portrait",
-                category: "portrait",
-                imageUrl: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Professional studio portrait"
-            },
-            {
-                id: 6,
-                title: "Product Photography",
-                category: "commercial",
-                imageUrl: "https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600",
-                description: "Commercial product photography"
-            }
-        ];
+  {
+    id: 1,
+    title: "Gallery Image 1",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img1.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 2,
+    title: "Gallery Image 2",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img2.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 3,
+    title: "Gallery Image 3",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img3.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 4,
+    title: "Gallery Image 4",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img4.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 5,
+    title: "Gallery Image 5",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img5.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 6,
+    title: "Gallery Image 6",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img6.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 7,
+    title: "Gallery Image 7",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img7.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 8,
+    title: "Gallery Image 8",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img8.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 9,
+    title: "Gallery Image 9",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img9.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 10,
+    title: "Gallery Image 10",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img10.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 11,
+    title: "Gallery Image 11",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img11.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 12,
+    title: "Gallery Image 12",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img12.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 13,
+    title: "Gallery Image 13",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img13.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 14,
+    title: "Gallery Image 14",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img14.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 15,
+    title: "Gallery Image 15",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img15.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 16,
+    title: "Gallery Image 16",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img16.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 17,
+    title: "Gallery Image 17",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img17.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 18,
+    title: "Gallery Image 18",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img18.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 19,
+    title: "Gallery Image 19",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img19.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 20,
+    title: "Gallery Image 20",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img20.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 21,
+    title: "Gallery Image 21",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img21.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 22,
+    title: "Gallery Image 22",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img22.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 23,
+    title: "Gallery Image 23",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img23.jpg",
+    description: "Client photo shoot"
+  },
+  {
+    id: 24,
+    title: "Gallery Image 24",
+    category: "event",
+    imageUrl: "https://rupesh-kumar-photography.github.io/Rupesh-Kumar-/gallery/img24.jpg",
+    description: "Client photo shoot"
+  }
+];
 
         // Portfolio functionality
         let currentFilter = 'all';
